--- a/test/sass/style.sass
+++ b/test/sass/style.sass
@@ -12,6 +12,9 @@ h1
 	padding: 10px
 	background: #1E6E94
 
+.box
+	clear: both
+
 .target
 	float: left
 	font-size: 14px
@@ -20,4 +23,16 @@ h1
 	padding: 10px
 	border: solid 1px #ccc
 	background: #e9e9e9
+	word-break: break-all
 
+.target2
+	font-size: 13px
+	border: solid 1px #ccc
+	background: #F8F7F3
+
+#t8-lines
+	width: 200px
+	margin: 10px
+	// padding: 10px
+	border: solid 1px #ccc
+	background: #e9e9e9
